--- a/src/components/portfolio/portfolio-item/portfolio-item.module.scss
+++ b/src/components/portfolio/portfolio-item/portfolio-item.module.scss
@@ -20,10 +20,23 @@ $blue: #221380;
 		position: relative;
 		width: 100%;
 		height: 50%;
-		overflow: hidden;
 		box-shadow:
 			0 0 30px 0 #404780aa,
 			inset 0 0 30px 0 #404780aa;
+
+		.wayToDescRight {
+			position: absolute;
+			top: 50%;
+			transform: translateX(100%);
+			right: 0;
+		}
+		.wayToDescLeft {
+			position: absolute;
+			top: 50%;
+			left: 0;
+			transform-origin: left;
+			rotate: 180deg;
+		}
 
 		img {
 			width: 100%;
@@ -46,6 +59,54 @@ $blue: #221380;
 				display: block;
 			}
 		}
+
+		.desc {
+			position: absolute;
+			top: 0;
+			background: $white;
+			box-shadow: 0 0 30px 0 #404780aa;
+			max-width: 70svw;
+			overflow: hidden;
+			display: flex;
+			flex-direction: column;
+			padding: 2rem;
+
+			h3 {
+				font-size: 24px;
+				margin: 0 0 1rem;
+			}
+
+			h4,
+			ul {
+				margin: 0 0 1rem;
+			}
+
+			li {
+				margin-left: -10px;
+			}
+
+			button {
+				border: 2px solid $accent;
+				color: $accent;
+				background: none;
+				font-size: 24px;
+				font-weight: 500;
+				padding: 0.5rem 0;
+				transition: all .3s;
+
+				&:hover {
+					scale: 1.05;
+					text-shadow: 0 0 15px $accent;
+					box-shadow:
+						0 0 15px 2px $accentLight,
+						inset 0 0 15px 2px $accentLight;
+				}
+				&:active{
+					scale: 1;
+					background: $accentLight;
+				}
+			}
+		}
 	}
 
 	.linkBtns {
@@ -63,16 +124,36 @@ $blue: #221380;
 			cursor: pointer;
 			font-weight: 600;
 			text-decoration: none;
+			transition: all 0.3s;
 		}
 
 		.gitBtn {
 			background: $accent;
 			color: $white;
+			&:hover {
+				scale: 1.05;
+				filter: brightness(1.2);
+			}
+			&:active{
+				scale: 1;
+				background: $blue;
+			}
 		}
 
 		.projectBtn {
 			background: transparent;
 			color: $accent;
+			&:hover {
+				scale: 1.05;
+				text-shadow: 0 0 15px $accent;
+				box-shadow:
+					0 0 15px 2px $accentLight,
+					inset 0 0 15px 2px $accentLight;
+			}
+			&:active{
+				scale: 1;
+				background: $accentLight;
+			}
 		}
 	}
 	.descBtn {
@@ -83,6 +164,16 @@ $blue: #221380;
 		cursor: pointer;
 		padding: 1rem 0;
 		font-weight: 600;
+		transition: all .3s;
+		&:hover {
+			scale: 1.05;
+			text-shadow: 0 0 5px #f6f6f655;
+			filter: brightness(1.5);
+		}
+		&:active{
+			scale: 1;
+			filter: brightness(0.5);
+		}
 	}
 }
 
@@ -90,6 +181,9 @@ $blue: #221380;
 	.portfolioItem {
 		.headline {
 			margin-top: 0;
+		}
+		.desc {
+			width: 40svw !important;
 		}
 	}
 }
